	* Commented out debugging printfs.
	* Reenabled direct cart-to-cart playing for ALSA devices.
2017-03-03 Fred Gleason <fredg@paravelsystems.com>
	* Added code in 'src/common/config.cpp' to set focus automatically
	to first blank field on the Login dialog.
2017-03-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.1.
2017-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Updated calls to the rivendell-c-api to include the 'ticket'
	parameter.
2017-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Consolidated all rivendell-c-api calls under methods of 'Config'.
2017-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Added support for ticket-based authentication.
2017-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Added support for storage of tickets in the Windows registry.
	* Added code to prevent changes in identity after the first successful
	authentication.
2017-04-14 Fred Gleason <fredg@paravelsystems.com>
	* Restored the '-mwindows' flag in 'Makefile.am'.
2017-04-14 Fred Gleason <fredg@paravelsystems.com>
	* Changed the project name to 'Rivendell Producer'.
2017-04-14 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.2.
2017-04-14 Fred Gleason <fredg@paravelsystems.com>
	* Added splash pages for rdlibraryb(1) and rdlogeditb(1).
2017-04-14 Fred Gleason <fredg@paravelsystems.com>
	* Added BMP versions of the splash pages.
2017-04-14 Fred Gleason <fredg@paravelsystems.com>
	* Added a splash page for rdadminb(8).
2017-04-14 Fred Gleason <fredg@paravelsystems.com>
	* Got splash pages working under MingW.
2017-04-14 Fred Gleason <fredg@paravelsystems.com>
	* Removed Qt3Support calls from 'src/common/config.cpp'.
	* Removed Qt3Support calls from 'src/common/transportbutton.cpp'.
2017-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Removed Qt3Support dependency.
2017-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Set the 'WindowStyasOnTopHint' flag for the Login dialog.